I mostly fixed the applications section to size the five applications correctly and make them stay inline with eachother as the screen size shifts. I also added cute box shadows to my buttons.

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --pink: #fde6ff;
     --b-style: solid;
     --fn-color: black;
+    --shadow-color: rgb(164, 135, 173);
 }
 
 
@@ -77,10 +78,19 @@ header nav a {
 }
 
 /* Pseudo classes for navigation links */ 
-a:link {text-decoration: none;}
-a:visited {text-decoration: none;}
-a:hover {text-decoration: underline;}
-a:active {text-decoration: underline; color: var(--pink);}
+.nav-button a:link {
+    text-decoration: none;
+}
+.nav-button a:visited {
+    text-decoration: none;
+}
+.nav-button a:hover {
+    box-shadow: 5pt 4pt var(--shadow-color);
+}
+.nav-button a:active {
+    box-shadow: 5pt 4pt var(--shadow-color);
+    background-color: var(--pink);
+}
 
 
 /* Main section */
@@ -176,59 +186,105 @@ Kind of fun... not sure yet lol. */
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-
 }
-/* .work-head */
 
 .applications {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     padding: 1rem;
-    max-width: 75%;
+    max-width: 78.5%;
     min-width: 60%;
+    justify-content: space-evenly;
 }
 
 .applications div {
     background-color:var(--main-purple);
     margin: 1.5rem;
-    min-width: 38%;
+    min-width: 34%;
+    border-radius: var(--b-radius);
+}
+
+
+/*pseudo classes for applications */
+.applications div:hover {
+    box-shadow: 8pt 6pt var(--shadow-color);
+}
+
+.applications div:active {
+    opacity: 60%;
+    box-shadow: 8pt 6pt var(--shadow-color);
+}
+
+.applications img {
+    border-radius: var(--b-radius) var(--b-radius) 0 0;
 }
 
 .first-app {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-    justify-content:first baseline;
     align-items: center;
-    flex: 0 1 613px;
-    border-width: 2rem;
-    border-color: var(--main-purple);
+    max-width: 80%;
+    flex-grow: 2;
 }
 
-.first-app img {
-    width: 100%;
-    height: 75%;
-    object-position: 70% 15%;
+.first-img {
+    width:100%;
+    border-color: var(--main-purple);
+    object-fit: contain;
 }
 
 .second-app {
     display: flex;
-    flex: 0 0 20%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30%;
+}
+
+.second-img {
+    width: 100%;
+    object-fit: contain;
 }
 
 .third-app {
     display: flex;
-    flex: 0 0 20%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30%;
+}
+
+.third-img {
+    width: 100%;
+    object-fit: contain;
 }
 
 .fourth-app {
     display: flex;
-    flex: 0 0 20%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30%;
+}
+
+.fourth-img {
+    width: 100%;
+    object-fit: contain;
 }
 
 .fifth-app {
     display: flex;
-    flex: 0 0 20%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30%;
+}
+
+.fifth-img {
+    width: 100%;
+    object-fit: contain;
 }
 
 /* Footer. Check out https://www.web-eau.net/blog/10-best-footer-html-css-snippets for a good footer idea! */
@@ -265,6 +321,7 @@ footer .contact {
 .email a {
     font-size: 1.8rem;
     color: var(--fn-color);
+    text-decoration: none;
 }
 
 .social {
